Fix scrollbar overlays navbar
ERM25079

[4.x]

--- a/resources/stylesheets/bluespice.css
+++ b/resources/stylesheets/bluespice.css
@@ -10,7 +10,7 @@ body.mediawiki, body.mediawiki.x-body {
 }
 /* scrollbar for Chrome, Safari, Edge */
 body::-webkit-scrollbar {
-	width: 12px;
+	width: 10px;
 	background-color: white;
 }
 body::-webkit-scrollbar-thumb {
