--- a/resources/stylesheets/structure/navbar-primary.language-button.css
+++ b/resources/stylesheets/structure/navbar-primary.language-button.css
@@ -1,10 +1,12 @@
 .ico-lang {
 	background-color: var( --icon-primary-fg ) !important;
 	-webkit-mask-repeat: no-repeat;
-    -webkit-mask-position: center;
+	-webkit-mask-size: 22px;
+	-webkit-mask-position: center;
 	-webkit-mask-image: url('../../images/translate_24px.svg') !important;
 	mask-image: url('../../images/translate_24px.svg')  !important;
 	mask-repeat: no-repeat;
+	mask-size: 22px;
 	mask-position: center;
 }
 .ico-btn:hover .ico-lang {
